# MyImage

./: CMakeLists.txt  README.md  basic.h  basic.hpp  filter.hpp  main.cpp  noise.hpp  readme.md
include/: ImageController.h  ImageProcess.h  MyImage.h  NewWindow.h  NoiseParameterDialog.h
src/: ImageController.cpp  ImageProcess.cpp  MyImage.cpp  NewWindow.cpp  NoiseParameterDialog.cpp  main.cpp
ui/: MyImage.ui  NoiseParameterDialog.ui
